Lifestyle Based Recommendation/force-app/main/default/objects/Site__c/fields/Address_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>Address_CountryCode__c</fullName>
    <label>Address CountryCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>