Lifestyle Based Recommendation/force-app/main/default/objects/Site__c/fields/Address_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Address_PostalCode__c</fullName>
    <label>Address PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>