Lifestyle Based Recommendation/force-app/main/default/objects/Site__c/fields/Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Address_Street__c</fullName>
    <label>Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>