Lifestyle Based Recommendation/force-app/main/default/objects/Site__c/fields/Area_Size__c.field-meta.xml
<CustomField>
    <fullName>Area_Size__c</fullName>
    <label>Area Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>