Lifestyle Based Recommendation/force-app/main/default/objects/Site__c/fields/No_of_floors__c.field-meta.xml
<CustomField>
    <fullName>No_of_floors__c</fullName>
    <label>No of floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>