Lifestyle Based Recommendation/force-app/main/default/objects/Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Site_Number__c</columns>
    <columns>Area_Size__c</columns>
    <columns>Building_Type__c</columns>
    <columns>Stage_Name__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Building_Type__c</field>
        <operation>equals</operation>
        <value>Rent/Sale</value>
    </filters>
    <label>All Records</label>
</ListView>