Lifestyle Based Recommendation/force-app/main/default/objects/Site__c/listViews/Rent_Sale.listView-meta.xml
<ListView>
    <fullName>Rent_Sale</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Site_Number__c</columns>
    <columns>Stage_Name__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Building_Type__c</field>
        <operation>equals</operation>
        <value>Rent/Sale</value>
    </filters>
    <label>Rent/Sale</label>
</ListView>